stop scrollbar on main view

--- a/packages/core/src/public/css/style.css
+++ b/packages/core/src/public/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Ubuntu', sans-serif;
   color: #fff;
+  overflow: hidden;
   background-color: #000;
 }
 
@@ -8,7 +9,7 @@ body {
   position: absolute;
   display: block;
   box-sizing: border-box;
-  background-color: #393939;
+  background-color: #191919;
   border: 3px solid #000;
   border-radius: 10px;
 }
